[package]
name = "wasm-image-converter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.24"
base64 = "0.21"


[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dependencies.web-sys]
version = "0.3"
features = ["console"]